--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde_json = "1.0.145"
 colored = "3.0.0"
 anyhow = "1.0.100"
 futures = "0.3.31"
+indicatif = "0.17"
 inquire = "0.9.1"
 
 [dev-dependencies]
